--- a/app/assets/stylesheets/property_web_scraper/application.css
+++ b/app/assets/stylesheets/property_web_scraper/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+.url_input input {
+  width: 80%;
+  padding: 6px;
+  margin: 10px;
+  font-size: large;
+}
