--- a/app/views/property_web_scraper/scraper/welcome.html.erb
+++ b/app/views/property_web_scraper/scraper/welcome.html.erb
@@ -4,7 +4,7 @@
       <div>
         <%= label_tag(:source_url, "Host to scrape:") %>
         <span class="url_input">
-          <%= collection_select(:scraper, :scraper_name, @scraper_configs_coll, :name, :name) %>
+          <%= collection_select(:scraper, :scraper_name, @scraper_configs_coll, :id, :host) %>
         </span>
       </div>
       <br>
