--- a/app/views/property_web_scraper/scraper/show.html.erb
+++ b/app/views/property_web_scraper/scraper/show.html.erb
@@ -6,21 +6,17 @@
         <br>
         <br>
         <div>
-          <%= label_tag(:source_url, "Webpage URL:") %>
+          <p>
+            Please enter the url for a property from <%= link_to "#{@import_host.host_url}", "#{@import_host.host_url}", target: "_blank" %>
+          </p>
+          <%# label_tag(:source_url, "Webpage URL:") %>
           <span class="url_input">
             <%= text_field_tag(:source_url) %>
           </span>
-          <p>
-            Please use a url from this site <%= link_to "#{@import_host.host_url}", "#{@import_host.host_url}", target: "_blank" %>
-          </p>
+          <%= submit_tag("Retrieve property info") %>
         </div>
-        <br>
-        <%= submit_tag("Retrieve from webpage") %>
       <% end %>
       <br>
-      <p><a href="https://github.com/etewiah/property_web_builder/issues/13">
-          This is an experimental feature. Help us improve it by giving feedback here.</a>
-      </p>
     <% else %>
       <div>
         Sorry, scraper could not be found
@@ -28,3 +24,29 @@
     <% end %>
   </div>
 </div>
+<% if @import_host_listings.length > 0 %>
+  <div class="row">
+    <div class="col-sm-8">
+      <br>
+      <br>
+      <br>
+      <h3>Previously imported listings </h3>
+      <br>
+      <br>
+      <br>
+    </div>
+  </div>
+<% end %>
+<% @import_host_listings.each do |listing| %>
+  <div class="row">
+    <div class="col-sm-2">
+      <span> <%= listing.reference %> </span>
+    </div>
+    <div class="col-sm-2">
+      <span> <%= listing.price %> </span>
+    </div>
+    <div class="col-sm-8">
+      <%= link_to listing.import_url, listing.import_url, target: "_blank" %>
+    </div>
+  </div>
+<% end %>
