Remove bootstrap gem

--- a/app/views/layouts/property_web_scraper/application.html.erb
+++ b/app/views/layouts/property_web_scraper/application.html.erb
@@ -4,6 +4,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Property Web Scraper</title>
+    <%= stylesheet_link_tag    "property_web_scraper/application", media: "all" %>
+    <%= javascript_include_tag "property_web_scraper/application" %>
+    <%= csrf_meta_tags %>
+
+    <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
+    <!-- Google Font -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
