--- a/app/views/property_web_scraper/scraper/welcome.html.erb
+++ b/app/views/property_web_scraper/scraper/welcome.html.erb
@@ -1,113 +1,52 @@
 <div class="row">
   <div class="col-sm-12">
+    <h3 style="margin: 20px 0px">Get started by selecting the website you would like to scrape from</h3>
     <%= form_tag("/scrapers/submit", method: "post") do %>
       <div>
         <%= label_tag(:import_url, "Host to scrape:") %>
-          <span class="url_input">
+        <span class="url_input">
           <%= collection_select(:scraper, :scraper_name, @scraper_configs_coll, :id, :host) %>
         </span>
       </div>
       <br>
       <%= submit_tag("Go") %>
-        <% end %>
-          <br>
-          <p><a href="https://github.com/RealEstateWebTools/property_web_scraper">
-        This is an experimental feature. Help us improve it by giving feedback here.</a>
-          </p>
-          <p>
-            Al
-          </p>
-          <p>
-            <form action="https://formspree.io/your@email.com" method="POST">
-              <div class="form-group row">
-                <label for="example-text-input" class="col-2 col-form-label">Text</label>
-                <div class="col-10">
-                  <input class="form-control" type="text" value="Artisanal kale" id="example-text-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-search-input" class="col-2 col-form-label">Search</label>
-                <div class="col-10">
-                  <input class="form-control" type="search" value="How do I shoot web" id="example-search-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-email-input" class="col-2 col-form-label">Email</label>
-                <div class="col-10">
-                  <input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-url-input" class="col-2 col-form-label">URL</label>
-                <div class="col-10">
-                  <input class="form-control" type="url" value="https://getbootstrap.com" id="example-url-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-tel-input" class="col-2 col-form-label">Telephone</label>
-                <div class="col-10">
-                  <input class="form-control" type="tel" value="1-(555)-555-5555" id="example-tel-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-password-input" class="col-2 col-form-label">Password</label>
-                <div class="col-10">
-                  <input class="form-control" type="password" value="hunter2" id="example-password-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-number-input" class="col-2 col-form-label">Number</label>
-                <div class="col-10">
-                  <input class="form-control" type="number" value="42" id="example-number-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
-                <div class="col-10">
-                  <input class="form-control" type="datetime-local" value="2011-08-19T13:45:00" id="example-datetime-local-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-date-input" class="col-2 col-form-label">Date</label>
-                <div class="col-10">
-                  <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-month-input" class="col-2 col-form-label">Month</label>
-                <div class="col-10">
-                  <input class="form-control" type="month" value="2011-08" id="example-month-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-week-input" class="col-2 col-form-label">Week</label>
-                <div class="col-10">
-                  <input class="form-control" type="week" value="2011-W33" id="example-week-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-time-input" class="col-2 col-form-label">Time</label>
-                <div class="col-10">
-                  <input class="form-control" type="time" value="13:45:00" id="example-time-input">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-color-input" class="col-2 col-form-label">Color</label>
-                <div class="col-10">
-                  <input class="form-control" type="color" value="#563d7c" id="example-color-input">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4">
-                  <label>Url you would like to scrape:</label>
-                </div>
-                <div class="col-sm-4">
-                  <input type="text" name="name">
-                </div>
-              </div>
-              <input type="email" name="_replyto">
-              <input type="submit" value="Send">
-            </form>
-          </p>
+    <% end %>
+    <br>
+    <br>
+    <br>
+    <p>Help us improve this product by giving us some feedback or contributing <a href="https://github.com/RealEstateWebTools/property_web_scraper">
+        here.</a>
+    </p>
+    <p>
+    </p>
+    <p>
+      <form action="https://formspree.io/your@email.com" method="POST">
+        <div class="form-group row">
+          <label for="example-url-input" class="col-2 col-form-label">Url you would like to scrape</label>
+          <div class="col-10">
+            <input class="form-control" type="url" value="" id="example-url-input">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="example-bool-input" class="col-2 col-form-label">Would you pay for this service?</label>
+          <div class="col-10">
+            <input class="form-control" type="bool" value="" id="example-bool-input">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="example-email-input" class="col-2 col-form-label">Email</label>
+          <div class="col-10">
+            <input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="example-text-input" class="col-2 col-form-label">Any other comments:</label>
+          <div class="col-10">
+            <input class="form-control" type="text" value="" id="example-text-input">
+          </div>
+        </div>
+        <input type="submit" value="Send">
+      </form>
+    </p>
   </div>
 </div>
