Improve price retrieval

--- a/app/views/property_web_scraper/scraper/show.html.erb
+++ b/app/views/property_web_scraper/scraper/show.html.erb
@@ -43,7 +43,7 @@
       <span> <%= listing.reference %> </span>
     </div>
     <div class="col-sm-2">
-      <span> <%= listing.price %> </span>
+      <span> <%= listing.price_string %> </span>
     </div>
     <div class="col-sm-8">
       <%= link_to listing.import_url, listing.import_url, target: "_blank" %>
