Improve dispay text and ui

--- a/app/views/property_web_scraper/retrieve_results.js.erb
+++ b/app/views/property_web_scraper/retrieve_results.js.erb
@@ -1,5 +1,8 @@
-$('#inmo-search-results').html("<%= j (render 'retrieve_results') %>");
-
+<% if @success %>
+  $('#retrieve-results').html("<%= j (render 'retrieve_results') %>");
+<% else %>
+  $('#retrieve-results').html("<%= j (render 'retrieve_results_failure') %>");
+<% end %>
 // INMOAPP.truncateDescriptions();
 // INMOAPP.sortSearchResults();
 // $('#inmo-search-results').slideDown(350);
