--- a/app/views/property_web_scraper/scraper/_retrieve_results.html.erb
+++ b/app/views/property_web_scraper/scraper/_retrieve_results.html.erb
@@ -1,1 +1,20 @@
-<h5>Results...</h5>
+<!-- <h5>Result:</h5> -->
+<p>Property info retrieved:</p>
+<table class="table">
+  <% @listing_attributes.each do |listing_attribute| %>
+    <tr>
+      <th><%= listing_attribute  %></th>
+      <td><%= @listing[listing_attribute]  %></td>
+    </tr>
+  <% end %>
+  <tr>
+    <th>Url</th>
+    <td>
+      <%= link_to @listing.import_url, @listing.import_url, target: "_blank" %>
+    </td>
+  </tr>
+  <thead>
+  </thead>
+  <tbody>
+  </tbody>
+</table>
