--- a/app/views/property_web_scraper/scraper/welcome.html.erb
+++ b/app/views/property_web_scraper/scraper/welcome.html.erb
@@ -33,38 +33,41 @@
     <div id="retrieve-results"></div>
     <br>
     <br>
-    <p>Help us improve this product by giving us some feedback:
-    </p>
-    <p>
-    </p>
-    <p>
-      <form action="https://formspree.io/pws@propertywebbuilder.com" method="POST">
-        <div class="form-group row">
-          <label for="example-url-input" class="col-2 col-form-label">Url you would like to scrape</label>
-          <div class="col-10">
-            <input class="form-control" type="url" value="" id="example-url-input">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="example-bool-input" class="col-2 col-form-label">Would you pay for this service?</label>
-          <div class="col-10">
-            <input class="form-control" type="bool" value="" id="example-bool-input">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="example-email-input" class="col-2 col-form-label">Email</label>
-          <div class="col-10">
-            <input class="form-control" type="email" value="" id="example-email-input">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="example-text-input" class="col-2 col-form-label">Any other comments:</label>
-          <div class="col-10">
-            <input class="form-control" type="text" value="" id="example-text-input">
-          </div>
-        </div>
-        <input type="submit" value="Send">
-      </form>
-    </p>
+    <div class="card card-outline-info mb-3 text-center">
+      <div class="card-block">
+        <blockquote class="card-blockquote">
+          <p>Help us improve this product by giving us some feedback:</p>
+        </blockquote>
+        <p>
+          <form action="https://formspree.io/pws@propertywebbuilder.com" method="POST">
+            <div class="form-group row">
+              <label for="example-url-input" class="col-2 col-form-label">Url you would like to scrape</label>
+              <div class="col-10">
+                <input class="form-control" type="url" value="" id="example-url-input">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="example-bool-input" class="col-2 col-form-label">Would you pay for this service?</label>
+              <div class="col-10">
+                <input class="form-control" type="bool" value="" id="example-bool-input">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="example-email-input" class="col-2 col-form-label">Email</label>
+              <div class="col-10">
+                <input class="form-control" type="email" value="" id="example-email-input">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="example-text-input" class="col-2 col-form-label">Any other comments:</label>
+              <div class="col-10">
+                <input class="form-control" type="text" value="" id="example-text-input">
+              </div>
+            </div>
+            <input type="submit" value="Send">
+          </form>
+        </p>
+      </div>
+    </div>
   </div>
 </div>
