Added retrieve_as_json endpoint

--- a/app/views/property_web_scraper/scraper/welcome.html.erb
+++ b/app/views/property_web_scraper/scraper/welcome.html.erb
@@ -8,7 +8,7 @@
       <div>
         <%= label_tag(:import_url, "Host to scrape:") %>
         <span class="url_input">
-          <%= collection_select(:scraper, :scraper_name, @scraper_configs_coll, :id, :host) %>
+          <%# collection_select(:scraper, :scraper_name, @scraper_configs_coll, :id, :host) %>
         </span>
       </div>
       <br>
