Clean up spp_modern assets

--- a/app/views/layouts/property_web_scraper/spp_modern.html.erb
+++ b/app/views/layouts/property_web_scraper/spp_modern.html.erb
@@ -304,20 +304,22 @@ I would like to learn more about Property for sale.</textarea>
           //
       }
   }
-  jQuery(document).ready(function(){
-    "use strict";
+  // jQuery(document).ready(function(){
+  //   "use strict";
 
 
-    $('.is_masonry').imagesLoaded( function(){
-      $('.is_masonry').masonry({
-       itemSelector: '.grid-gallery-item',
-       columnWidth: 150,
-       isFitWidth: true
-      });
-    });
-  });
+  //   $('.is_masonry').imagesLoaded( function(){
+  //     $('.is_masonry').masonry({
+  //      itemSelector: '.grid-gallery-item',
+  //      columnWidth: 150,
+  //      isFitWidth: true
+  //     });
+  //   });
+  // });
 
 </script>
+
+<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
 <script>
   var config = {
