--- a/app/views/property_web_scraper/single_property_view/spp_lite/show.html.erb
+++ b/app/views/property_web_scraper/single_property_view/spp_lite/show.html.erb
@@ -5,7 +5,6 @@
         <div class="col-md-9">
           <div class="row">
             <div class="col-md-12">
-              <%# render '/property_web_scraper/single_property_view/images_section_carousel' %>
             </div>
             <div class="col-md-12">
               <%= render '/property_web_scraper/single_property_view/property_info_list' %>
@@ -68,6 +67,9 @@
     </div>
   </div>
 </div>
+<%= render '/property_web_scraper/single_property_view/spp_lite/images_carousel' %>
+<%= render '/property_web_scraper/single_property_view/property_info_list' %>
+
 <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
