--- a/app/views/layouts/property_web_scraper/spp_lite.html.erb
+++ b/app/views/layouts/property_web_scraper/spp_lite.html.erb
@@ -1,70 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
 
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Parallax Template - Materialize</title>
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <%= stylesheet_link_tag    "property_web_scraper/spp_lite", media: "all" %>
 </head>
+
 <body>
-  <nav class="white" role="navigation">
+  <nav class="white" role="navigation" style="display: none;">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
-
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Navbar Link</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-
   <%= yield %>
-
-  <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-      </div>
-    </div>
-    <div class="footer-copyright">
+    <footer class="page-footer teal">
       <div class="container">
-      Powered by <a class="brown-text text-lighten-3" href="https://github.com/RealEstateWebTools/property_web_scraper">PropertyWebScraper</a>
+        <div class="row">
+        </div>
       </div>
-    </div>
-  </footer>
+      <div class="footer-copyright">
+        <div class="container">
+          Powered by <a class="brown-text text-lighten-3" href="https://github.com/RealEstateWebTools/property_web_scraper">PropertyWebScraper</a>
+        </div>
+      </div>
+    </footer>
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <%= javascript_include_tag "property_web_scraper/spp_lite" %>
+      <script type="text/javascript">
+      // start carrousel
+      $('.carousel.carousel-slider').carousel({
+        fullWidth: true,
+        indicators: true
+      });
 
 
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <%= javascript_include_tag "property_web_scraper/spp_lite" %>
-  <script type="text/javascript">
-   // start carrousel
-   $('.carousel.carousel-slider').carousel({
-      fullWidth: true,
-      indicators: true
-   });
+      // move next carousel
+      $('.moveNextCarousel').click(function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carousel').carousel('next');
+      });
 
+      // move prev carousel
+      $('.movePrevCarousel').click(function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $('.carousel').carousel('prev');
+      });
+      </script>
+</body>
 
-   // move next carousel
-   $('.moveNextCarousel').click(function(e){
-      e.preventDefault();
-      e.stopPropagation();
-      $('.carousel').carousel('next');
-   });
-
-   // move prev carousel
-   $('.movePrevCarousel').click(function(e){
-      e.preventDefault();
-      e.stopPropagation();
-      $('.carousel').carousel('prev');
-   });
-   </script>
-  </body>
 </html>
