--- a/app/views/property_web_scraper/single_property_view/spp_lite/show.html.erb
+++ b/app/views/property_web_scraper/single_property_view/spp_lite/show.html.erb
@@ -61,6 +61,12 @@
     <div class="container">
       <div class="section">
         <div class="row">
+          <div>
+            
+    <inmo-map ref="inmomap" style="min-height: 600px;"  :markers="[{'id':1,'title':'Example country house for sale.','show_url':'/en/properties/for-sale/1/example-country-house-for-sale','image_url':'http://res.cloudinary.com/hyk02upex/image/upload/v1512916315/jqsu44qmncu3z1llmwst.jpg','display_price':'$300,000','position':{'lat':40.4076591,'lng':-74.5798604}}]"   :zoom="15">
+    </inmo-map>
+
+          </div>
           <div class="col s12 center">
             <h3><i class="mdi-content-send brown-text"></i></h3>
             <h4>Contact Us</h4>
